<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2015 Qualcomm Technologies, Inc.
All Rights Reserved.
Confidential and Proprietary - Qualcomm Technologies, Inc.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qualcomm.qti.securemsm.mdtp.MdtpDemo.setupWizardActivity" >

    <TextView
        android:id="@+id/label_4_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/label_4_1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/label_4_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_4_1"
        android:text="@string/label_4_2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/wiz_unblock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_4_2"
        android:onClick="oclUnblock"
        android:text="@string/wiz_unblock"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_4_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/wiz_unblock"
        android:layout_marginTop="15dp"
        android:text="@string/label_4_3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/wiz_remote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_4_3"
        android:onClick="oclRemote"
        android:text="@string/wiz_remote"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <Button
        android:id="@+id/wiz_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/wiz_remote"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/wiz_remote"
        android:onClick="oclLocal"
        android:text="@string/wiz_local"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_4_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/wiz_local"
        android:layout_marginTop="15dp"
        android:text="@string/label_4_4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

</RelativeLayout>