<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2015 Qualcomm Technologies, Inc.
All Rights Reserved.
Confidential and Proprietary - Qualcomm Technologies, Inc.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
              android:id="@+id/label_1_1"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/label_1_1"
              android:textAppearance="?android:attr/textAppearanceMedium" />
      <TextView
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/state_deactivated"
              android:id="@+id/textView_mdtp_state" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/wizard_container"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <Button
          android:id="@+id/service_console"
          android:layout_width="wrap_content"
          android:text="@string/service_console"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textStyle="normal"
          android:onClick="oclServiceConsole"
          android:layout_height="wrap_content" />
      <Button
          android:id="@+id/emergency_dialer"
          android:layout_width="wrap_content"
          android:text="@string/emergency_dialer"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textStyle="normal"
          android:onClick="oclEmergencyDialer"
          android:layout_height="wrap_content" />
       <Button
          android:id="@+id/wifi_wizard"
          android:layout_width="wrap_content"
          android:text="@string/start_wifi_wizard"
          android:textAppearance="?android:attr/textAppearanceSmall"
          android:textStyle="normal"
          android:onClick="oclStartWifiWizard"
          android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
     android:id="@+id/wiz_cont"
     android:layout_width="match_parent"
     android:text="@string/wiz_cont"
     android:textAppearance="?android:attr/textAppearanceSmall"
     android:textStyle="bold"
     android:onClick="oclCont"
     android:enabled="false"
     android:layout_height="wrap_content" />

</LinearLayout>