<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2015 Qualcomm Technologies, Inc.
All Rights Reserved.
Confidential and Proprietary - Qualcomm Technologies, Inc.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.qualcomm.qti.securemsm.mdtp.MdtpDemo.setupWizardActivity">

    <TextView
        android:id="@+id/textView_signup_message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_1_1"
        android:text="@string/label_signup_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_service_activate"
        android:layout_below="@+id/button_service_activate"
        android:layout_marginTop="24dp"
        android:text="@string/configuration" />

    <Button
        android:id="@+id/button_service_activate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_signup_message_label"
        android:layout_below="@+id/textView_signup_message_label"
        android:layout_marginTop="24dp"
        android:text="@string/service_activate" />

</RelativeLayout>
